В тестах Lion и Cat переиспользую список, в Cat поле вынес в начало