@@ -8,6 +8,8 @@ import java.util.*;
 import static org.junit.Assert.*;
 
 public class CatTest extends TestBase {
+    @Mock
+    Predator predator;
 
     @Test
     public void getCatSoundTest() {
@@ -17,15 +19,13 @@ public class CatTest extends TestBase {
         assertEquals("Мяу", actualSound);
     }
 
-    @Mock
-    Predator predator;
-
     @Test
     public void getCatFoodTest() throws Exception {
         Feline feline = new Feline();
         Cat cat = new Cat(feline);
-        Mockito.when(predator.eatMeat()).thenReturn(Arrays.asList("Животные", "Птицы", "Рыба"));
+        List<String> expectedFood = List.of("Животные", "Птицы", "Рыба");
+        Mockito.when(predator.eatMeat()).thenReturn(expectedFood);
         List<String> actualEatMeat = cat.getFood();
-        assertEquals(Arrays.asList("Животные", "Птицы", "Рыба"), actualEatMeat);
+        assertEquals(expectedFood, actualEatMeat);
     }
 }
